--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-
 spring.datasource.url=jdbc:mysql://localhost:3306/rentingSystem
 
-spring.datasource.username=mysql
+spring.datasource.username=root
 
-spring.datasource.password=mysql
+spring.datasource.password=
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
@@ -11,10 +10,8 @@ spring.jpa.show-sql=true
 
 spring.jpa.generate-ddl=true
 
-spring.jpa.hibernate.ddl-auto=update
+    spring.jpa.hibernate.ddl-auto=update
 
 server.error.include-message=always
 
 server.error.include-stacktrace=always
-
-
