--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/rentingSystem
+spring.datasource.url=jdbc:mysql://localhost:8889/rentingSystem
 
 spring.datasource.username=root
 
-spring.datasource.password=
+spring.datasource.password=root
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
@@ -10,7 +10,7 @@ spring.jpa.show-sql=true
 
 spring.jpa.generate-ddl=true
 
-    spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 
 server.error.include-message=always
 
