--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,8 @@
 spring.datasource.url=jdbc:mysql://localhost:8889/rentingSystem
 
-spring.datasource.username=mysql
-
+spring.datasource.username=root
 
 spring.datasource.password=root
-
-spring.datasource.password=mysql
-
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
