--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:8889/rentingSystem
+spring.datasource.url=jdbc:mysql://localhost:3306/rentingSystem
 
-spring.datasource.username=root
+spring.datasource.username=mysql
 
 
 
-spring.datasource.password=
+spring.datasource.password=mysql
 
 
 
