--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,4 @@
-
-spring.datasource.url=jdbc:mysql://localhost:8889/rentingSystem
-
-spring.datasource.username=root
-
-spring.datasource.password=root
-
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
-spring.jpa.show-sql=true
-
-spring.jpa.generate-ddl=true
-
-spring.jpa.hibernate.ddl-auto=update
-
-server.error.include-message=always
-
-server.error.include-stacktrace=always
-
+spring.jpa.hibernate.ddl-auto = update
+spring.datasource.url = jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/rentingSystemDB
+spring.datasource.username = ${MYSQL_USER:root}
+spring.datasource.password = ${MYSQL_PASSWORD:root}
